--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,15 @@
         <java.version>1.8</java.version>
     </properties>
 
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <dependencies>
+
 
     </dependencies>
 
